test_src/compiler_errors/types/arithmetic/IncrementBoolError2.b
class IncrementBoolError2 {
    void test() {
        Bool value = true;
        println(++value);
    }
}
